<resources>
    <string name="app_name">GoFun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="Password" />
    <string name="EnterPassword" />
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="next">NEXT</string>
    <string name="choose_the_activities_you_are_interested_in">Choose the activities you are interested in:</string>
    <string name="hiking">Hiking</string>
    <string name="sports">Sports</string>
    <string name="amusement">Amusement</string>
    <string name="arts">Arts</string>
    <string name="scenic_view">Scenic View</string>
    <string name="entertainment">Entertainment</string>
    <string name="choose_the_location_range">Choose the location range:</string>
    <string name="i_like_the_activities_within">I like the activities within...</string>
    <string name="email">Email</string>
    <string name="confirm">Confirm</string>
    <string name="like">Like</string>
</resources>