<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/editTextUsernameSignUp"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/back"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:shadowColor="#C58C8C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUpText" />

    <EditText
        android:id="@+id/editTextEmailSignUp"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsernameSignUp" />

    <EditText
        android:id="@+id/editTextPasswordSignUp"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailSignUp" />

    <TextView
        android:id="@+id/textViewSignUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="Start your journey by creating a new account!"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="302dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#000000"
        android:onClick="confirm"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSignUp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="366dp"
        android:layout_height="201dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewSignUpText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47"
        app:srcCompat="@drawable/wallpsignup" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>